--- a/src/styles/variable.less
+++ b/src/styles/variable.less
@@ -1,7 +1,54 @@
-.mt-10  {
+.mt-10 {
   margin-top: 10px;
 }
 
-.mt-20  {
+.mt-12 {
+  margin-top: 12px;
+}
+
+.mt-16 {
+  margin-top: 16px;
+}
+
+.mt-20 {
   margin-top: 20px;
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-12 {
+  margin-bottom: 12px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.pt-10 {
+  padding-top: 10px;
+}
+
+.pb-20 {
+  padding-bottom: 20px;
+}
+
+.box-shadow_radius {
+  border-radius: 10px;
+  box-shadow: 0 0 5px #cbcbcb;
+  background: #fff;
+  overflow: hidden;
 }
